# run-tracker

./: .editorconfig  .gitignore  PRD-MASTER.md  README.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  README.md  dependabot.yml  labeler.yml  labels.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-request.yml
.github/scripts/: sync-labels.sh
.github/workflows/: ai-coach.yml  e2e.yml  flutter.yml  landing.yml  load.yml  pr-checks.yml  release.yml  security.yml  supabase.yml
ai-coach/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
ai-coach/src/: __init__.py  config.py  logging_setup.py  main.py  router.py  schemas.py
ai-coach/src/api/: chat.py  deps.py  health.py  post_run.py  training_plan.py
ai-coach/src/middleware/: __init__.py  auth.py  rate_limit.py
ai-coach/src/prompts/: __init__.py  post_run.md  system_coach.md  training_plan.md
ai-coach/src/services/: __init__.py  cache.py  claude_client.py  cost_tracker.py
ai-coach/tests/: conftest.py  test_cost.py  test_router.py
analysis/: 01-market-competitor.md  02-personas-jtbd.md  03-core-features.md  04-gamification-social.md  05-ai-ml-features.md  06-health-integration.md  07-monetization.md  08-ux-ui-design.md  09-tech-stack.md  10-growth-aso.md
app/: .env.example  .gitignore  README.md  analysis_options.yaml  pubspec.yaml
app/integration_test/: auth_flow_test.dart  badge_award_test.dart  chat_with_coach_test.dart  onboarding_flow_test.dart  paywall_test.dart  redeem_coin_test.dart  run_workout_test.dart  step_counter_test.dart
app/lib/: app.dart  main.dart
app/test/: widget_test.dart
app/web/: index.html  manifest.json
brand/: README.md
brand/tokens/: colors.json  motion.json  radius.json  shadow.json  spacing.json  typography.json
content/: README.md
content/badges/: badges-seed.json
content/training-plans/: 10k-12weeks.json  5k-improver-8weeks.json  c25k-9weeks.json  full-marathon-18weeks.json  half-marathon-16weeks.json  walking-3-tieres.json
content/voice-scripts/: PRE-RENDER.md  en-milestone.json  vi-motivation.json  vi-pace-warning.json  vi-start-stop.json  vi-weather.json
docs/: DECISIONS.md
docs/analytics/: README.md  dashboards.md  data-privacy.md  data-warehouse.md  events-spec.md  experimentation.md  funnels.md  instrumentation-flutter.md  north-star.md  user-properties.md
docs/app-store/: README.md  (+8 more)
landing/: .env.example  README.md  next.config.ts  package-lock.json  package.json
supabase/: README.md  config.toml
tests/e2e/: README.md  full_user_journey.py  landing_test.spec.ts  package.json  playwright.config.ts  pnpm-lock.yaml  pyproject.toml
tests/security/: README.md  auth_bypass_test.py  conftest.py  file_upload_test.py  jwt_tampering_test.py  pyproject.toml  rate_limit_test.py  sql_injection_test.py
(+290 files in other folders)
