[project]
name = "runvie-ai-coach"
version = "0.1.0"
description = "RunVie AI Coach backend service powered by Claude Sonnet 4.7 + Haiku 4.5"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [{ name = "RunVie Team", email = "dev@runvie.app" }]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "anthropic>=0.40.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "redis>=5.2.0",
    "sentry-sdk[fastapi]>=2.18.0",
    "structlog>=24.4.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.1",
    "sse-starlette>=2.1.3",
    "pyjwt[crypto]>=2.9.0",
    "cryptography>=43.0.0",
    "tenacity>=9.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "types-redis>=4.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [".venv", "build", "dist"]

[tool.ruff.lint]
select = [
    "E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "RUF",
    "ASYNC", "S", "A", "PIE", "T20", "PT", "RET", "PTH",
]
ignore = [
    "S101",
    "S104",
    "B008",
    "RUF012",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S", "PT011"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["sse_starlette.*", "sentry_sdk.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q --strict-markers"
